--- a/NoteApplication/app/src/main/res/values/strings.xml
+++ b/NoteApplication/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
-    <string name="app_name">NoteApplication</string>
+    <string name="app_name">Noted</string>
+    <string name="title_activity_note_list">NoteListActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="list_note_title">Note Keeper</string>
+    <string name="title_edit_note">Edit Note</string>
 </resources>
